assets/css/app.css
/* ... */
#artist-content{
   display: none;
}

header{
   background-color: #F1F6F5!important;
   border-color: transparent!important;
   margin-bottom: 0px!important;
   border-width: 0px!important;
}

header>.container{
   background: #f8f8f8;
}

.banner-box {position: relative;top: 50px;}
.welcome-box {background-color: rgba(255,255,255,.9);padding: 3%;}
.welcome-box h2 {font-size: 60px;font-weight: 100;margin:0;}
.welcome-box h4 {font-weight: 100;font-size: 36px;margin:0;}

.explore h3 {
color: #000;
font-weight: 100!important;
background-color: rgba(255, 255, 255, .9);
padding: 4%;
width: 100%;
text-align: center;
font-size: 44px;
transition:background-color .3s ease, color .3s ease;
}

.explore h3:hover {background-color: #fff;text-decoration: none;}

.create>h3 {
color: #FFF;
font-weight: 100!important;
background-color: rgba(242, 117, 20, .9);
padding: 4%;
width: 100%;
text-align: center;
font-size: 44px;
transition:background-color .3s ease;
}

.create>h3:hover {background-color: #F39437;}

.home-bottom {
padding-top: 3%;
padding-bottom: 3%;
}
.week-header{
   background: #C0202B;
   padding: 2% 1% 1% 1%;
}
.week-header h3{
   color: #fff;
   font-size: 44px;
   font-weight: 200;
}
.week-header p{
   color: #fff;
   font-size: 13px;
   font-weight: 200;
}
.week-container{
   border: 3px solid #fff;
   border-radius: 5px;
   outline: 1px solid #F0F0F0;
}
.week-art {
padding: 0px;
min-height:500px;
}
.week-art>img{
   width: 100%;
}
.week-header h3{
   margin-top: 0px;
   margin-bottom: 0px;
}

.week-header .btn-container {width:49.5%;}

.chain-btn.btn {
background: #D62C35;
border-radius: 0px;
padding: 20px;
font-size: 20px;
color: #fff;
font-weight: 100;
transition:background-color .3s ease;
width:100%;
}

.chain-btn.btn:hover {background: #DD464E;}

.submit-btn h3{
font-size: 26px;
font-weight: 100;
}

.submit-btn {
background: #F37512;
border-radius: 0px;
width:100%;
}

.submit-btn:hover {
background: #F39437;}

.btn-container {
display: inline-block;
}

.MyZebra_Form input.myzebra-password, .MyZebra_Form input.myzebra-text, .MyZebra_Form select, .MyZebra_Form textarea {
padding: 6px 5px 5px 5px;
border: none!important
;
}
.myzebra-terms{
   display: none!important;
}
.cred-label{
   display: none;
}
.cred-taxonomy-auxilliary{
   display: none;
}
form#cred_form_661_1 {
display: inline-block;
}
input.myzebra-text {
width: 200px!important;
float: left;
}
.tag-chain{
   background-color: #F37717;
   padding: 5px 0;
   min-height: 100px;
}
.MyZebra_Form input.myzebra-password, .MyZebra_Form input.myzebra-text, .MyZebra_Form input[type="text"] {
height: 25px;
border-radius: 5px;
background: #F69143;
margin-top: 3px;
}

.MyZebra_Form div.myzebra-form-message {
border: none!important;
background: transparent!important;
position: relative!important;
overflow: hidden!important;
background-image: none!important;
height: 30px!important;
position: absolute!important;
top: 0px!important;
right: 10px!important;
width: 240px!important;
}

.tag-chain p {
color: #fff;
margin-bottom: 0px;
padding: 6px;
}

.tag-chain i{
padding: 8px 0px 0px 10px;
color: #fff;
}

.tag-btn .btn-primary:hover, .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
color: #fff;
background-color: #C0202B;
border-color: #C0202B;
}

/* Weekly Challenge Home Page Modal */
body.home .modal-dialog {width: 55%;}
body.home .modal-footer {display:none;}

input#cred_form_661_1_form_submit_1 {display:none;}

a.myzebra-add-new-term {
background-color: #F69143!important;
border: none;
border-radius: 5px!important;
color: #fff!important;
font-weight: 200;
margin-top: 3px;
font-size: 14px!important;
padding: 5px 10px!important;
margin-left: 3px;
float: left;
display: inline-block;
}

.home-events {
   background: #F0F0F0;
   padding: 25px 10%;
   font-weight: 100;
   color: #000;
}

.home-events p{
   font-size: 22px;
}

.home-events h1{
   font-size: 54px;
   color: #C0202B;
   font-weight: 100;
}

.btn-default {
color: #fff;
font-weight: 100;
background-color: #C0202B;
border: none;
border-radius: 0;
}

.home-events .btn-default {font-size: 41px;transition:background-color .3s ease, color .3s ease;}

.btn-primary {
font-weight: 100;
font-size: 14px;
width: 100%;
background: #B7B7B7;
border: transparent!important;
border-radius: 0px!important;
height: 30px;
}

.tag-btn {
padding:0px;
}

.tag-btn:hover {
background: #C0202B;
}

.tag-btn button {
padding: 30px 0;
}


/* ----- News Section ----- */

.home-news a h4 {
color: #BF2129;
font-weight: 100;
font-size: 35px;
}

.home-news h5 {
font-size: 22px;
font-weight: 100;
}

.home-news-main {padding: 7% 0;}

p.date {
color: #7e7e7e!important;
text-transform: uppercase!important;
font-size: 13px!important;
}

.home-news p {
color: #000000;
font-size: 18px;
}

.home-news a {
color: #BF2129;
text-transform: uppercase;
}

/* ==========================================================================
   ABOUT
   ========================================================================== */

.about-body-copy {
font-size: 15px;
font-weight: 300;
line-height: 1.5;	
margin:3% 0;
}

body.about .container {
margin: 0 auto!important;
}

.about-body-copy h1 {
font-size: 52px;
font-weight: 100;
color: #ac3234;
}

/* ==========================================================================
   NEWS (reel)
   ========================================================================== */

.news-grid {margin:0 auto;margin-top:3%!important;}
body.news .img-container {padding-bottom: 100%;}
.news-grid h2 {color: #ac3234;font-size: 32px;font-weight: 100;}
.news-grid a p {font-size: 16px;color:#707070;margin-top: 3%;}
.border-only {border: 1px solid #E0E0E0;padding: 1%;margin-bottom:10%;min-height: 411px;}
.continue-div {
transition: background-color .3s ease;
text-align: right;
display: table-caption;
}

.continue-div:hover {background-color:#ECECEC; }
a.continue {color: #ac3234;font-weight: bold;}
/* ... */

